# old-cppbot

./: .dockerignore  .env.example  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  andremor.cpp  andremor.hpp  command.txt  config.example.json  main.cpp  readme.md  util.cpp  util.hpp
.github/workflows/: cmake.yml  docker-image.yml
include/: andremor.hpp  db.hpp  util.hpp
lib/: CPUData.cpp  CPUData.h  CPUSnapshot.cpp  CPUSnapshot.h
src/: andremor.cpp  db.cpp  main.cpp  util.cpp
